[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Cesar0106 <62568082+Cesar0106@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
